# thingplug-starter-kit

gcc/: Makefile.in  config.h  configure  configure.ac
gcc/src/: Makefile.am  Makefile.in  thingplugtest.cpp
python/: ThingplugApplication.py  ThingplugDevide.py  config.ini
